--- a/package.json
+++ b/package.json
@@ -22,6 +22,24 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@yoopta/accordion": "^4.6.1",
+    "@yoopta/action-menu-list": "^4.6.1",
+    "@yoopta/blockquote": "^4.6.1",
+    "@yoopta/callout": "^4.6.1",
+    "@yoopta/code": "^4.6.1",
+    "@yoopta/editor": "^4.6.1",
+    "@yoopta/embed": "^4.6.1",
+    "@yoopta/file": "^4.6.1",
+    "@yoopta/headings": "^4.6.1",
+    "@yoopta/image": "^4.6.1",
+    "@yoopta/link": "^4.6.1",
+    "@yoopta/link-tool": "^4.6.1",
+    "@yoopta/lists": "^4.6.1",
+    "@yoopta/marks": "^4.6.1",
+    "@yoopta/paragraph": "^4.6.1",
+    "@yoopta/toolbar": "^4.6.1",
+    "@yoopta/video": "^4.6.1",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.395.0",
