--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.45.0",
     "@yoopta/accordion": "^4.6.1",
     "@yoopta/action-menu-list": "^4.6.1",
     "@yoopta/blockquote": "^4.6.1",
@@ -32,6 +35,7 @@
     "@yoopta/code": "^4.6.1",
     "@yoopta/editor": "^4.6.1",
     "@yoopta/embed": "^4.6.1",
+    "@yoopta/exports": "^4.6.7",
     "@yoopta/file": "^4.6.1",
     "@yoopta/headings": "^4.6.1",
     "@yoopta/image": "^4.6.1",
