--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
