--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blocknote/mantine": "^0.13.2",
     "@blocknote/react": "^0.13.2",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
