--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@blocknote/core": "^0.13.5",
     "@blocknote/mantine": "^0.13.5",
     "@blocknote/react": "^0.13.5",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -58,6 +59,7 @@
     "partysocket": "1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.3.0",
@@ -65,6 +67,7 @@
     "y-partykit": "^0.0.32",
     "y-webrtc": "^10.3.0",
     "yjs": "^13.6.19",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
