--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blocknote/mantine": "^0.13.5",
     "@blocknote/react": "^0.13.5",
     "@hookform/resolvers": "^3.9.0",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -55,6 +56,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "input-otp": "^1.2.5",
     "lucide-react": "^0.395.0",
     "partysocket": "1.0.2",
     "react": "^18.2.0",
