--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@peterek/vite-plugin-favicons": "^2.0.0",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
