--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "vite.config.js",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"  
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/[^.]+$",
-        "dest": "/index.html"  
-      },
-      {
-        "src": "/assets/(.*)",
-        "dest": "/assets/$1"  
-      }
-    ],
-    "env": {
-      "NODE_ENV": "production"
-    }
-  }
-  
+{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
