--- a/package.json
+++ b/package.json
@@ -39,24 +39,27 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.45.0",
-    "@yoopta/accordion": "^4.6.1",
-    "@yoopta/action-menu-list": "^4.6.1",
-    "@yoopta/blockquote": "^4.6.1",
-    "@yoopta/callout": "^4.6.1",
-    "@yoopta/code": "^4.6.1",
-    "@yoopta/editor": "^4.6.1",
-    "@yoopta/embed": "^4.6.1",
-    "@yoopta/exports": "^4.6.7",
-    "@yoopta/file": "^4.6.1",
-    "@yoopta/headings": "^4.6.1",
-    "@yoopta/image": "^4.6.1",
-    "@yoopta/link": "^4.6.1",
-    "@yoopta/link-tool": "^4.6.1",
-    "@yoopta/lists": "^4.6.1",
-    "@yoopta/marks": "^4.6.1",
-    "@yoopta/paragraph": "^4.6.1",
-    "@yoopta/toolbar": "^4.6.1",
-    "@yoopta/video": "^4.6.1",
+    "@yoopta/accordion": "^4.9.2",
+    "@yoopta/action-menu-list": "^4.9.2",
+    "@yoopta/blockquote": "^4.9.2",
+    "@yoopta/callout": "^4.9.2",
+    "@yoopta/code": "^4.9.2",
+    "@yoopta/divider": "^4.9.2",
+    "@yoopta/editor": "^4.9.2",
+    "@yoopta/email-builder": "^4.9.2",
+    "@yoopta/embed": "^4.9.2",
+    "@yoopta/exports": "^4.9.2",
+    "@yoopta/file": "^4.9.2",
+    "@yoopta/headings": "^4.9.2",
+    "@yoopta/image": "^4.9.2",
+    "@yoopta/link": "^4.9.2",
+    "@yoopta/link-tool": "^4.9.2",
+    "@yoopta/lists": "^4.9.2",
+    "@yoopta/marks": "^4.9.2",
+    "@yoopta/paragraph": "^4.9.2",
+    "@yoopta/table": "^4.9.2",
+    "@yoopta/toolbar": "^4.9.2",
+    "@yoopta/video": "^4.9.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -69,6 +72,8 @@
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.24.1",
+    "slate": "^0.102.0",
+    "slate-react": "^0.102.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "y-partykit": "^0.0.32",
