--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-oauth/google": "^0.12.1",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@yoopta/accordion": "^4.9.2",
     "@yoopta/action-menu-list": "^4.9.2",
     "@yoopta/blockquote": "^4.9.2",
@@ -57,8 +60,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.12.0",
     "input-otp": "^1.2.5",
     "lucide-react": "^0.395.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
@@ -66,7 +71,7 @@
     "react-router-dom": "^6.24.1",
     "slate": "^0.102.0",
     "slate-react": "^0.102.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
