--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.24.1",
